--- a/opencv/build.gradle
+++ b/opencv/build.gradle
@@ -1,12 +1,8 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion "28.0.3"
-
-    defaultConfig {
-        applicationId "org.opencv"
-    }
 
     buildTypes {
         release {
